--- a/src/pdp.html
+++ b/src/pdp.html
@@ -1,71 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Commerce Hogg</title>
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.js" defer></script>
-</head>
-<body>
-<div class="flex flex-col min-h-screen false bg-gray-100">
-    <div style="position:fixed;z-index:9999;top:16px;left:16px;right:16px;bottom:16px;pointer-events:none"></div>
-    <header class="bg-purple text-white">
-        <div class="container mx-auto px-3 lg:px-0 py-5 flex items-center">
-            <a class="flex items-center text-white" href="/">
-                <span class="w-6 h-6">
-                    <svg viewBox="0 0 101 101" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M61.6580394,100.001931 C61.3674316,99.0213198 60.9602997,97.4197865 60.551764,95.8169405 C60.3481981,95.0214248 60.1446322,94.2259091 59.9551053,93.5065319 C59.7740018,92.8186602 58.4880268,89.2007703 58.7772308,88.5142114 C59.9396624,85.7548483 65.7448006,86.1053478 72.444225,78.4757483 C75.1116405,75.4367733 75.6746055,74.6123775 76.9212712,72.526446 C78.2170736,70.3578125 79.4342573,67.8163629 80.2204429,65.4613214 C80.9883778,63.1561637 81.3590081,60.7210455 81.6341731,58.3975095 C81.9037224,56.1133555 82.4189548,53.0993224 81.8686249,51.5187928 C81.4432423,50.2927009 81.3239106,48.33673 78.3350014,48.9156449 C75.3460922,49.4945598 77.2413611,52.0543875 74.3282627,54.1219407 C71.4165682,56.1881812 62.3838572,58.2111015 59.9551053,58.5826047 C57.5263534,58.9554207 55.9820602,59.2954183 54.5360403,59.6984271 C53.3876478,60.0187337 52.2476786,60.4191171 51.2789857,61.0006574 C50.2962537,61.5887614 49.6336115,63.1994838 48.64386,63.2309894 C47.6555124,63.262495 46.3667296,61.8670607 45.3460922,61.1857527 C44.3689759,60.5346375 43.49996,59.6367287 42.5186319,59.1405159 C41.5962677,58.6758087 40.5208781,58.4040731 39.4553159,58.2111015 C38.080895,57.9629951 36.0045227,57.8054673 34.2707027,57.6531903 C32.503189,57.4982879 30.4619142,57.5914919 28.8516377,57.2816871 C27.3480577,56.992886 25.7490124,56.5071751 24.6090432,55.7943616 C23.470478,55.081548 22.6463871,53.8423288 22.0174386,53.0061184 C21.4965906,52.3129958 20.9869739,51.2299917 20.3678527,50.5893784 C19.7403082,49.9382633 19.0720504,49.1952568 18.2479594,49.1020529 C17.4224646,49.0088489 16.3919999,49.6127057 15.8908065,50.2178752 C15.378382,50.8374848 15.1720083,51.9323035 15.1720083,52.8197104 C15.1720083,54.0287368 15.6044104,55.9230093 15.8908065,57.4680951 C16.2066847,59.1720215 16.5983736,61.2789566 17.068681,63.0445814 C17.5207378,64.7366932 18.1300316,66.5771438 18.7182669,68.0644693 C19.2447305,69.394267 19.9368546,70.7293157 20.6037084,71.9685349 C21.2495037,73.1683721 21.9289927,74.3590202 22.7250056,75.5010972 C23.5884059,76.7403164 24.7269711,78.2276419 25.7883216,79.4051627 C26.7893044,80.5170469 27.9475242,81.6354947 29.0860894,82.5649091 C30.1699024,83.4496906 31.3702394,84.2491445 32.6211168,84.9829618 C33.9955377,85.7876666 35.7630514,86.7800922 37.3340187,87.3997017 C38.8221557,87.986493 40.0435512,88.4223201 41.1034978,88.7006193 C41.6468082,88.8437072 42.3445479,89.3858655 42.5186319,89.8164417 C42.792393,90.4977497 42.675869,91.5531864 42.7530837,92.7910928 C42.8317022,94.030312 43.0815969,95.2682185 43.224795,96.5087504 C43.3455307,97.549747 43.4185336,98.7719007 43.5519044,99.927105 C17.5642587,99.7643262 0.205,100.04 0.205,100.04 L0.905547522,0.479765283 L36.2502057,0.479765283 C36.2502057,0.479765283 47.6695515,44.93019 49.9466819,44.8579897 C52.2252162,44.7844767 65.7054914,0.04 65.7054914,0.04 L99.872275,0.04 L100.205,99.598922 C100.205,99.598922 84.3970539,100.041313 61.6580394,100.001931 Z"
-                              fill="currentColor"/>
-                    </svg>
-                </span>
-                <span class="ml-2 leading-none font-featured text-2xl uppercase">
-                    Commerce Hogg
-                </span>
-            </a>
-            <nav class="ml-auto space-x-4 hidden md:block">
-                <a class="text-sm font-semibold transition-colors duration-200 hover:text-white text-white"
-                   href="/work.html">
-                    Work
-                </a>
-                <a class="text-sm font-semibold transition-colors duration-200 hover:text-white text-yellow"
-                   href="/contact.html">
-                    Contact
-                </a>
-            </nav>
-            <nav class="ml-auto md:ml-10 flex text-white">
-                <a aria-label="GitHub link"
-                   href="https://github.com/mattwaler"
-                   target="_blank"
-                   rel="noopener"
-                   class="w-5 h-5 hidden md:block transition-colors duration-200 hover:text-white">
-                    <svg aria-hidden="true"
-                         focusable="false" role="img"
-                         xmlns="http://www.w3.org/2000/svg"
-                         viewBox="0 0 496 512">
-                        <path fill="currentColor"
-                              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/>
-                    </svg>
-                </a>
-                <button aria-label="Toggle mobile menu" class="w-6 h-6 md:hidden">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         fill="none"
-                         viewBox="0 0 24 24"
-                         stroke="currentColor">
-                        <path stroke-linecap="round"
-                              stroke-linejoin="round"
-                              stroke-width="2"
-                              d="M4 6h16M4 12h16M4 18h16"/>
-                    </svg>
-                </button>
-            </nav>
-        </div>
-        <div class="container mx-auto">
-            <div class="h-px bg-white" style="opacity:0.2"></div>
-        </div>
-    </header>
-    <main class="flex-1">
-
+@@include('./includes/header.html')
 
 <!--
   This example requires Tailwind CSS v2.0+
@@ -457,26 +390,4 @@
         </div>
     </div>
 </div>
-    </main>
-    <footer class="container mx-auto text-gray-600 mb-6 mt-8 sm:mt-16 text-sm px-3 lg:px-0">
-        <div class="w-full flex items-center justify-center space-x-3 mt-4 md:w-auto md:mt-0 md:ml-6"><a
-                aria-label="GitHub link"
-                href="https://github.com/mattwaler"
-                target="_blank"
-                rel="noopener"
-                class="w-5 h-5 text-gray-500">
-            <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
-                <path fill="currentColor"
-                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/>
-            </svg>
-        </a>
-        </div>
-        <div class="flex flex-wrap justify-center items-center mt-2 text-center">
-            <span>©&nbsp;2021 |&nbsp;</span>
-            <address>Commerce Hogg Ltd, 7 Bell Yard, London, WC2A 2JR</address>
-            <span>&nbsp;| Company Number: 13613079, Registered in England</span>
-        </div>
-    </footer>
-</div>
-</body>
-</html>
+@@include('./includes/footer.html')
